<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/expense_list_nav_graph"
    app:startDestination="@id/expense_list_fragment">

    <fragment
        android:id="@+id/expense_list_fragment"
        android:name="com.kappzzang.jeongsan.expenselist.ExpenseListFragment"
        android:label="@string/all_expense"
        tools:layout="@layout/fragment_expense_list" />

    <fragment
        android:id="@+id/pending_expense_list_fragment"
        android:name="com.kappzzang.jeongsan.expenselist.PendingExpenseListFragment"
        android:label="@string/all_pending"
        tools:layout="@layout/fragment_pending_expense_list" />

    <fragment
        android:id="@+id/complete_expense_list_fragment"
        android:name="com.kappzzang.jeongsan.expenselist.CompleteExpenseListFragment"
        android:label="@string/all_complete"
        tools:layout="@layout/fragment_complete_expense_list" />

</navigation>
