<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    android:clipToPadding="false"
    android:background="@color/background_base"
    tools:context=".ui.creategroup.CreateGroupActivity">
    <TextView
        android:id="@+id/page_title_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/create_group_title"
        android:textStyle="bold"
        android:textSize="30dp"
        />
    <TextView
        android:id="@+id/page_description_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/page_title_textview"
        app:layout_constraintTop_toBottomOf="@id/page_title_textview"
        android:text="@string/create_group_description"
        android:textStyle="bold"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/group_info_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/page_title_textview"
        app:layout_constraintTop_toBottomOf="@id/page_description_textview"
        android:layout_marginTop="30dp"
        android:background="@drawable/all_background_frame"
        android:padding="10dp"
        android:elevation="10dp"
        >
        <TextView
            android:id="@+id/group_name_menu_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/create_group_name_menu"
            android:textStyle="bold"
            android:textSize="20dp"
            />
        <EditText
            android:id="@+id/group_name_value_edittext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/group_name_menu_textview"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/group_name_menu_textview"
            app:layout_constraintBottom_toBottomOf="@id/group_name_menu_textview"
            android:layout_marginStart="50dp"
            android:hint="@string/create_group_name_value"
            android:background="@null"
            />

        <TextView
            android:id="@+id/group_category_menu_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/group_name_menu_textview"
            android:layout_marginTop="30dp"
            android:text="@string/create_group_category_menu"
            android:textStyle="bold"
            android:textSize="20dp"
            />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/group_category_content_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/group_name_value_edittext"
            app:layout_constraintTop_toTopOf="@id/group_category_menu_textview"
            app:layout_constraintBottom_toBottomOf="@id/group_category_menu_textview"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/member_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/group_info_layout"
        app:layout_constraintBottom_toTopOf="@id/create_group_button"
        android:layout_marginTop="30dp"
        android:background="@drawable/all_background_frame"
        android:elevation="10dp"
        android:padding="10dp"
        >
        <TextView
            android:id="@+id/member_menu_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/create_group_member_menu"
            android:textSize="20dp"
            android:textStyle="bold"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/add_member_button"
            android:layout_width="60dp"
            android:layout_height="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/member_menu_textview"
            app:layout_constraintBottom_toBottomOf="@id/member_menu_textview"
            android:text="@string/create_group_add_button"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:background="@drawable/all_background_button"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/member_content_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/add_member_button"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:listitem="@layout/item_member_invite"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/create_group_button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/member_layout"
        android:layout_marginTop="30dp"
        android:text="@string/create_group_button"
        android:textStyle="bold"
        android:textSize="20dp"
        android:textColor="@color/white"
        android:background="@drawable/all_background_button"
        />
</androidx.constraintlayout.widget.ConstraintLayout>