<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.kappzzang.jeongsan.expensedetail.ExpenseDetailViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".expensedetail.ExpenseDetailActivity">

        <TextView
            android:id="@+id/expense_detail_header_textview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/all_header_margin"
            android:layout_marginTop="@dimen/all_header_margin"
            android:fontFamily="sans-serif-black"
            android:text="@string/expense_detail_header"
            android:textColor="@color/black"
            android:textSize="@dimen/all_header_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/expense_detail_description_textview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/all_header_margin"
            android:layout_marginTop="13dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/expense_detail_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/expense_detail_header_textview" />

        <androidx.fragment.app.FragmentContainerView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/expense_detail_description_textview"
            app:layout_constraintBottom_toTopOf="@id/expense_detail_submit_button"
            />



        <Button
            android:id="@+id/expense_detail_submit_button"
            style="@style/BottomButton"
            android:text="@string/expense_detail_submit"
            android:textSize="@dimen/all_bottom_button_text_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
