<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="isPlaceholder"
            type="Boolean" />

        <variable
            name="viewHolder"
            type="com.kappzzang.jeongsan.addexpense.ExpenseItemListAdapter.ExpenseItemViewHolder" />

        <variable
            name="item"
            type="com.kappzzang.jeongsan.data.ExpenseItemInput" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:paddingHorizontal="10dp"
        android:paddingBottom="10dp">

        <EditText
            android:id="@+id/expense_name_edittext"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:hint="@string/item_expense_name"
            stringText="@={item.itemName}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/expense_price_edittext"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="@dimen/add_expense_item_name_bias" />

        <EditText
            android:id="@+id/expense_price_edittext"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:hint="@string/item_expense_price"
            android:inputType="numberDecimal"
            integerText="@={item.itemPrice}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/expense_name_edittext"
            app:layout_constraintRight_toLeftOf="@id/expense_quantity_edittext"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="@dimen/add_expense_item_price_bias" />

        <EditText
            android:id="@+id/expense_quantity_edittext"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:hint="@string/item_expense_quantity"
            android:inputType="numberDecimal"
            android:maxLength="3"
            integerText="@={item.itemQuantity}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/expense_price_edittext"
            app:layout_constraintRight_toLeftOf="@id/expense_add_remove_button"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="@dimen/add_expense_item_quantity_bias" />

        <ImageButton
            android:id="@+id/expense_add_remove_button"
            android:layout_width="@dimen/add_expense_item_button_size"
            android:layout_height="@dimen/add_expense_item_button_size"
            android:background="@{isPlaceholder?(@drawable/round_button_blue):(@drawable/round_button_red)}"
            android:src="@{isPlaceholder?(@drawable/baseline_add_24):(@drawable/baseline_remove_24)}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
