<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.kappzzang.jeongsan.ui.addexpense.AddExpenseViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".ui.addexpense.AddExpenseActivity">

        <TextView
            android:id="@+id/addexpense_header_textview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/all_header_margin"
            android:layout_marginTop="@dimen/all_header_margin"
            android:text="@{viewModel.manualMode?@string/add_expense_header_manual:@string/add_expense_header}"
            android:textColor="@color/black"
            android:textSize="@dimen/all_header_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/addexpense_description_textview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/all_header_margin"
            android:layout_marginTop="13dp"
            android:fontFamily="@font/pretendard_semi_bold"
            android:text="@{viewModel.manualMode?@string/add_expense_description_manual:@string/add_expense_description}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/addexpense_header_textview" />

        <androidx.cardview.widget.CardView
            android:id="@+id/addexpense_image_container"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginHorizontal="@dimen/all_header_margin"
            android:layout_marginTop="14dp"
            app:cardCornerRadius="@dimen/all_container_corner_radius"
            app:cardElevation="@dimen/all_container_elevation"
            app:layout_constraintBottom_toTopOf="@id/addexpense_item_list_scrollview"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/addexpense_description_textview"
            app:layout_constraintVertical_weight="0.1">

            <ImageView
                android:id="@+id/addexpense_image_imageview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="@{viewModel.uploadedImage?View.VISIBLE:View.GONE}"
                app:srcCompat="@drawable/addexpense_receipt_test" />

            <ImageView
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_gravity="center"
                android:src="@drawable/baseline_add_24"
                android:visibility="@{viewModel.uploadedImage?View.GONE:View.VISIBLE}"
                app:tint="#6E6E6E" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|bottom"
                android:layout_marginBottom="45dp"
                android:fontFamily="@font/pretendard_semi_bold"
                android:text="@string/add_expense_add_picture_text"
                android:textAlignment="center"
                android:textColor="#6E6E6E"
                android:visibility="@{viewModel.uploadedImage?View.GONE:View.VISIBLE}" />
        </androidx.cardview.widget.CardView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/addexpense_item_list_scrollview"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginHorizontal="@dimen/all_header_margin"
            android:layout_marginTop="14dp"
            android:layout_marginBottom="21dp"
            android:background="@drawable/round_rect"
            android:elevation="5dp"
            android:paddingTop="12dp"
            android:paddingBottom="15dp"
            app:layout_constraintBottom_toTopOf="@id/addexpense_submit_button"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/addexpense_image_container"
            app:layout_constraintVertical_weight="0.15">

            <EditText
                android:id="@+id/addexpense_name_edittext"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:fontFamily="@font/pretendard_semi_bold"
                android:hint="@string/add_expense_name"
                android:inputType="text"
                android:text="@{viewModel.expenseName}"
                android:textAlignment="center"
                android:textSize="24sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent=".5" />

            <TextView
                android:id="@+id/add_expense_label_name"
                style="@style/ExpenseLabel"
                android:text="@string/item_expense_name"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/add_expense_label_price"
                app:layout_constraintTop_toBottomOf="@id/addexpense_name_edittext"
                app:layout_constraintWidth_percent="@dimen/add_expense_item_name_bias" />

            <TextView
                android:id="@+id/add_expense_label_price"
                style="@style/ExpenseLabel"
                android:text="@string/item_expense_price"
                app:layout_constraintLeft_toRightOf="@id/add_expense_label_name"
                app:layout_constraintRight_toLeftOf="@id/add_expense_label_quantity"
                app:layout_constraintTop_toBottomOf="@id/addexpense_name_edittext"
                app:layout_constraintWidth_percent="@dimen/add_expense_item_price_bias" />

            <TextView
                android:id="@+id/add_expense_label_quantity"
                style="@style/ExpenseLabel"
                android:text="@string/item_expense_quantity"
                app:layout_constraintLeft_toRightOf="@id/add_expense_label_price"
                app:layout_constraintRight_toLeftOf="@id/add_expense_label_button"
                app:layout_constraintTop_toBottomOf="@id/addexpense_name_edittext"
                app:layout_constraintWidth_percent="@dimen/add_expense_item_quantity_bias" />

            <TextView
                android:id="@+id/add_expense_label_button"
                android:layout_width="@dimen/add_expense_item_button_size"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text=""
                app:layout_constraintLeft_toRightOf="@id/add_expense_label_quantity"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/addexpense_name_edittext" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/addexpense_item_list_recyclerview"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:items="@{viewModel.expenseItemList}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/add_expense_label_name"
                app:layout_constraintVertical_bias="0" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/addexpense_submit_button"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginHorizontal="@dimen/all_bottom_button_margin_horizontal"
            android:layout_marginBottom="@dimen/all_bottom_button_margin_bottom"
            android:background="@drawable/round_rect_button_blue"
            android:fontFamily="@font/pretendard_bold"
            android:text="@string/add_expense_submit"
            android:textSize="@dimen/all_bottom_button_text_size"
            app:backgroundTint="@null"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>